[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "philiprehberger-api-timer"
version = "0.1.10"
description = "Drop-in ASGI/WSGI middleware for endpoint timing"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Philip Rehberger" }]
keywords = ["api", "timer", "middleware", "asgi", "performance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/philiprehberger/py-api-timer#readme"
Repository = "https://github.com/philiprehberger/py-api-timer"
Issues = "https://github.com/philiprehberger/py-api-timer/issues"
Changelog = "https://github.com/philiprehberger/py-api-timer/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/philiprehberger_api_timer"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
strict = true
